--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,16 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Immerso
-email: info@theimmerso.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is the immerso site.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.theimmerso.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+baseurl: "/www" # the subpath of your site, e.g. /blog
+url: "http://theimmerso.com" # the base hostname & protocol for your site, e.g. http://example.com
+
+social-network-links:
+  email: "info@theimmerso.com"
+  facebook: Immerso
+  twitter: Immersoofficial
+  rss: true
 
 # Build settings
 theme: minima
