--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Immerso
+email: info@theimmerso.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is the immerso site.
 baseurl: "/www" # the subpath of your site, e.g. /blog
 url: "http://theimmerso.com" # the base hostname & protocol for your site, e.g. http://example.com
-
-social-network-links:
-  email: "info@theimmerso.com"
-  facebook: Immerso
-  twitter: Immersoofficial
-  rss: true
+twitter_username: Immersoofficial
+facebook_username: Immerso
 
 # Build settings
 theme: minima
