--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Immerso
 email: info@theimmerso.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is the immerso site.
-baseurl: "/www" # the subpath of your site, e.g. /blog
-url: "http://theimmerso.com" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://www.theimmerso.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Immersoofficial
 facebook_username: Immerso
 
