--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@ nav:
   - title: "Services"
     section: services
 
-  - title: "Portfolio"
+  - title: "Experiences"
     section: portfolio
     
   - title: "About"
