--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -66,7 +66,7 @@ team:
             icon: fab fa-linkedin-in
       - name: "Sara Campos"
         role: "Lead Marketer"
-        image: assets/img/team/Sara.jpeg
+        image: assets/img/team/Sara.jpg
         social:
           - url: https://twitter.com
             icon: fab fa-twitter
@@ -76,7 +76,7 @@ team:
             icon: fab fa-linkedin-in
       - name: "Luis Carlos Marin"
         role: "Lead Designer"
-        image: assets/img/team/2.jpg
+        image: assets/img/team/LuisCa.jpeg
         social:
           - url: https://twitter.com
             icon: fab fa-twitter
