--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,3 +16,6 @@ nav:
 
   - title: "Theme Source"
     url: https://github.com/raviriley/agency-jekyll-theme/
+
+  - title: "Demo"
+    url: experience/index.html
