feat: experience added

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,4 +18,4 @@ nav:
     url: https://github.com/raviriley/agency-jekyll-theme/
 
   - title: "Demo"
-    url: experience/index.html
+    url: "experience/index.html"
