--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -95,13 +95,13 @@ footer:
     social:
       - url: https://twitter.com/immersoofficial
         icon: "fab fa-twitter"  
-      - url: https://facebook.com/Immerso-112682913844197
+      - url: https://facebook.com/immersoofficial
         icon: "fab fa-facebook-f"
       #- url: https://linkedin.com
       #  icon: "fab fa-linkedin-in"
       #- url: https://github.com/raviriley/agency-jekyll-theme
       #  icon: "fab fa-github"
-      - url: https://instagram.com/immerso_official
+      - url: https://instagram.com/immersoofficial
         icon: "fab fa-instagram"
 
 
