--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 nav:
-  - title: "Services"
+  - title: "Products"
     section: services
 
   - title: "Experiences"
@@ -13,6 +13,3 @@ nav:
 
   - title: "Contact"
     section: contact
-
-  - title: "Demo"
-    url: "experience/index.html"
