--- a/_data/style.yml
+++ b/_data/style.yml
@@ -1,8 +1,8 @@
 #Color Customization
-#highlight: "#54bfff"
-#white: "#FF0000"
-#black: "#000"
+highlight: "#00F0A1"
+white: "#E8E8E8"
+black: "#342E37"
 
 #Image Customization
-header-image: "../img/header-bg.jpg"
+header-image: "../img/bg.jpg"
 contact-image: "../img/map-image.png"
