--- a/experience/package.json
+++ b/experience/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "A-Frame-Preact",
-  "description": "A boilerplate project for getting started with WebVR using A-Frame and Preact",
+  "name": "Experience-Engine",
+  "description": "Immerso Experience Engine",
   "private": true,
-  "author": "Prayash Thapa",
-  "homepage": "http://effulgence.io/",
+  "author": "Immerso",
+  "homepage": "https://theimmerso.com/experience/",
   "version": "1.0.0",
-  "repository": "https://github.com/prayasht/aframe-preact-starter/",
   "scripts": {
     "start": "brunch watch --server",
     "build": "brunch build --production",
+    "predeploy": "npm run build",
     "deploy": "ghpages -d public"
   },
   "dependencies": {
