--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -55,7 +55,7 @@ team:
     section: team
     people:
       - name: "Briam Mora"
-        role: "Lead Developer"
+        role: "CEO"
         image: assets/img/team/Briam.jpg
         social:
           - url: https://twitter.com
@@ -65,7 +65,7 @@ team:
           - url: https://linkedin.com
             icon: fab fa-linkedin-in
       - name: "Sara Campos"
-        role: "Lead Marketer"
+        role: "CFO"
         image: assets/img/team/Sara.jpg
         social:
           - url: https://twitter.com
@@ -75,8 +75,28 @@ team:
           - url: https://linkedin.com
             icon: fab fa-linkedin-in
       - name: "Luis Carlos Marin"
-        role: "Lead Designer"
+        role: "CPO"
         image: assets/img/team/LuisCa.jpeg
+        social:
+          - url: https://twitter.com
+            icon: fab fa-twitter
+          - url: https://facebook.com
+            icon: fab fa-facebook-f
+          - url: https://linkedin.com
+            icon: fab fa-linkedin-in
+      - name: "Cris Campos"
+        role: "CMO"
+        image: assets/img/team/Cris.jpg
+        social:
+          - url: https://twitter.com
+            icon: fab fa-twitter
+          - url: https://facebook.com
+            icon: fab fa-facebook-f
+          - url: https://linkedin.com
+            icon: fab fa-linkedin-in
+      - name: "Joseph Zamora"
+        role: "CTO"
+        image: assets/img/team/Joseph.jpg
         social:
           - url: https://twitter.com
             icon: fab fa-twitter
@@ -93,16 +113,16 @@ contact:
 footer:
     legal: "Privacy Policy"
     social:
-      - url: https://twitter.com/immersoofficial
-        icon: "fab fa-twitter"  
       - url: https://facebook.com/immersoofficial
         icon: "fab fa-facebook-f"
+      - url: https://twitter.com/immersoofficial
+        icon: "fab fa-twitter"  
       #- url: https://linkedin.com
       #  icon: "fab fa-linkedin-in"
       #- url: https://github.com/raviriley/agency-jekyll-theme
       #  icon: "fab fa-github"
-      - url: https://instagram.com/immersoofficial
-        icon: "fab fa-instagram"
+      - url: https://www.youtube.com/channel/UC8EY77km7qXLgOPFhZUWVug
+        icon: "fab fa-youtube"
 
 
 # {{ site.data.sitetext.ex.ex | markdownify | default: example }}
